fix overflow for large names

--- a/src/less/combat.less
+++ b/src/less/combat.less
@@ -73,3 +73,7 @@ a.combat-difficulty {
 .token-initiative {
     justify-content: center;
 }
+
+.token-name {
+    width: 160px;
+}
